--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: uts_mobile_programming
-description: "A new Flutter project."
+description: "UTS Rafael Nuansa - For Mobile Programming Lessons."
 publish_to: 'none'
 version: 0.1.0
 
