--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
   geolocator: ^11.0.0
   http: ^1.2.1
   permission_handler: ^11.3.1
-  weather: ^3.1.1
 
 dev_dependencies:
   flutter_test:
